--- a/streaming/streaming.tex
+++ b/streaming/streaming.tex
@@ -102,6 +102,8 @@ Chain : \seq_1 StreamingFun \fun StreamingFun
     \t1 Chain(\langle f \rangle \cat fs) = Chain(fs) \circ f
 \end{axdef}
 
+\textit{To do: introduce channels, e.g. between chained functions.}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %   A P P E N D I C E S
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
