Update based on feedback from @cgfrost

--- a/z/z-notation.tex
+++ b/z/z-notation.tex
@@ -147,5 +147,12 @@ Schema definitions:
 \where
   Predicates
 \end{schema}
+Decorations:
+\begin{symtab}
+        (undecorated)  & \verb/Input state/ \\
+        '  & \verb/Output state/ \\
+        ?  & \verb/Input parameter/ \\
+        !  & \verb/Output parameter/ \\
+\end{symtab}
 }
 \newpage
