--- a/distribution/distribution.tex
+++ b/distribution/distribution.tex
@@ -53,7 +53,7 @@ This document provides a formal model of image registries.
 %=============================================================================
 \section{Overview of this document}
 
-Docker Inc.\ introduced container images and registries to hold them and these were later standardised as part of the Open Container Initiative.
+Docker Inc.\ introduced container images and registries to hold them and these were later standardised as part of the Open Container Initiative. The reader is assumed to have a basic understanding of how images are used.
 
 This document models image references, repositories, and registries. It covers digests and tags.
 
@@ -61,11 +61,13 @@ The Z specification language is used to capture the model, but sufficient Englis
 For more information about Z, please consult the Z Manual (\texttt{https://www.cs.umd.edu/~mvz/handouts/z-manual.pdf}).
 The model was type checked using \texttt{fuzz} (\texttt{https://bitbucket.org/Spivey/fuzz}).
 
+I am grateful to Chris Frost for his helpful comments on this document.
+
 %=============================================================================
 \section{Fundamentals}
 
 Images are opaque blobs as far as we are concerned here - the decomposition into layers is ignored.
-Similarly, cryptographic hashes, or \textit{hexes} to use the terminology of the OCI Distribution specification, tags, and (registry) hostnames and paths are modelled, but their details are not.
+Similarly, cryptographic hashes (or \textit{hexes} to use the terminology of the OCI Distribution specification), tags, and (registry) hostnames and paths are modelled, but their details are not.
 \begin{zed}
 [ Image, Hex, Tag, Hostname, Path ] 
 \end{zed}
@@ -85,7 +87,7 @@ A content digest is a combination of a cryptographic hash function (such as \tex
     hash: Hex \\ 
 \end{schema}
 
-The idea is that a content digest $d$ identifies an image $i$ if and only if:\\
+The idea is that a content digest $d$ identifies an image $i$ if and only if applying the hash function (from the content digest) to the image produces the hash output in the content digest:\\
 %%unchecked
 \begin{zed}
 \t1 d.alg~i = d.hash
@@ -118,17 +120,19 @@ Initially, a repository is empty.
   tag' = \emptyset \\
 \end{schema}
  
- An image is added to a repository by \textit{pushing} it.
+\begin{samepage}
+An image is added to a repository by \textit{pushing} it.
 \begin{schema}{RepoPush}
   \Delta Repo \\
   i? : Image \\
   t? : Tag \\
+  d! : ContentDigest
 \where
   tag' = tag \oplus \{ t? \mapsto i? \} \\
-  \exists d: ContentDigest @ \\
-  \t1 cd' = cd \oplus \{ d \mapsto i? \} \\
+  cd' = cd \oplus \{ d! \mapsto i? \} \\
 \end{schema}
-The tag may be omitted in practice in which case it defaults to $Latest$. Note that the invariant of $Repo'$ ensures that the chosen digest identifies the input image. However, these is some non-determinism here in the choice of algorithm.
+The tag may be omitted in practice in which case it defaults to $Latest$. Note that the invariant of $Repo'$ ensures that the output digest identifies the input image. However, there is some non-determinism here in the choice of algorithm.
+\end{samepage}
 
 An image is retrieved from a repository by \textit{pulling} it.
 
@@ -152,9 +156,13 @@ or, if a content digest is not supplied, by using a tag.
   t? \in \dom tag \implies i! = tag~t? \\
 \end{schema}
 
+\begin{samepage}
+A successful pull operation uses either a content digest or a tag.
 \begin{zed}
   RepoPullOk \defs RepoPullByDigest \lor RepoPullByTag
 \end{zed}
+Failure cases, such as ``not found'', are omitted from the model.
+\end{samepage}
 
 %=============================================================================
 \newpage
@@ -175,7 +183,8 @@ Initially a registry has only empty repositories.
   \t2 repo'~p = \theta Repo' \\
 \end{schema}
 
-We define a promotion schema which operates on a single repository in a registry.
+\begin{samepage}
+We define a promotion schema\footnote{Promotion schemas are used to turn operations on a particular type into operations on collection of the type which operate on a single member of the collection and leave the rest unchanged} which operates on a single repository in a registry.
 \begin{schema}{RegistryPromote}
   \Delta Registry \\
   \Delta Repo \\
@@ -185,8 +194,10 @@ We define a promotion schema which operates on a single repository in a registry
   \theta Repo = repo~p? \\
   repo' = repo \oplus \{ p? \mapsto \theta Repo' \} \\
 \end{schema}
+The path must be valid and the registry is preserved except for the repository identified by the path which may be updated.
+\end{samepage}
 
-We then promote the push and pull operations.
+We then promote the repository push and pull operations to operate on a registry.
 \begin{zed}
   RegistryPush \defs \exists \Delta Repo @ RepoPush \land RegistryPromote \\
   RegistryPullOk \defs \exists \Delta Repo @ RepoPullOk \land RegistryPromote \\
@@ -222,6 +233,7 @@ We can also remove a registry from the network.
   reg' = \{ h? \} \ndres reg \\
 \end{schema}
 
+\begin{samepage}
 We define a promotion schema which operates on a single registry in a network.
 \begin{schema}{NetPromote}
   \Delta Net \\
@@ -232,19 +244,37 @@ We define a promotion schema which operates on a single registry in a network.
   \theta Registry = reg~h? \\
   reg' = reg \oplus \{ h? \mapsto \theta Registry' \} \\
 \end{schema}
+The hostname must be valid and the network is preserved except for the registry identified by the hostname which may be updated.
+\end{samepage}
 
+\begin{samepage}
 Finally, we promote the push and pull operations to work on a network.
 \begin{zed}
   NetPushOk \defs \exists \Delta Registry @ RegistryPush \land NetPromote \\
   NetPullOk \defs \exists \Delta Registry @ RegistryPullOk \land NetPromote
 \end{zed}
-Pushing can fail if there is no registry with the input hostname.
+Pushing and pulling can fail if there is no registry with the input hostname.
+\end{samepage}
 
 %=============================================================================
 \newpage
 \section{Image References}
 
-An image reference identifies an image in a registry.
+An image reference identifies an image in a registry. Let's remind ourselves what image references look like.
+
+An image reference consists of a hostname (with optional port) and a path. The image reference may also contain a tag and/or a digest. The hostname determines the network location of a registry. The path consists of one or more components separated by forward slashes. The first component is sometimes, by convention for certain registries, a user name providing access control to the image.
+
+Let's look at some examples:
+\begin{itemize}
+\item The image name \texttt{docker.io/istio/proxyv2} refers to an image with user name \texttt{istio} residing in the docker hub registry at \texttt{docker.io}.
+
+\item The image name \texttt{projectriff/builder:v1} is short-hand for\linebreak
+\texttt{docker.io/projectriff/builder:v1} which refers to an image with user name \texttt{projectriff} also residing at \texttt{docker.io}. The image has tag \texttt{v1}.
+
+\item The image name \texttt{gcr.io/cf-elafros/knative-releases/github.com}\linebreak\texttt{/knative/serving/cmd/autoscaler@sha256:deadbeefdeadbeef}\linebreak\texttt{deadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeef} refers to an image with user name \texttt{cf-elafros} residing at \texttt{gcr.io}. The image has a (made up) \texttt{SHA-256} digest.
+\end{itemize}
+
+For the purposes of our model, an image reference consists of a hostname, a path, a tag, and an optional content digest.
 \begin{schema}{Ref}
     host: Hostname \\
     path: Path \\
@@ -259,7 +289,6 @@ So far the push and pull operations have accumulated several input parameters.
     h? : Hostname \\
     p? : Path \\
     t? : Tag \\
-    d? : ContentDigest \\
 \end{schema}
 \begin{schema}{PullParms}
     h? : Hostname \\
@@ -268,6 +297,7 @@ So far the push and pull operations have accumulated several input parameters.
     d? : OptionalContentDigest \\
 \end{schema}
 
+\begin{samepage}
 An image reference is mapped to push input parameters as follows.
 \begin{schema}{RefPushParms}
     r? : Ref \\
@@ -279,6 +309,7 @@ An image reference is mapped to push input parameters as follows.
     r?.dig = None \\
 \end{schema}
 Pushing is not allowed if the image reference has a content digest.
+\end{samepage}
 
 An image reference is mapped to pull input parameters as follows.
 \begin{schema}{RefPullParms}
@@ -291,7 +322,7 @@ An image reference is mapped to pull input parameters as follows.
     d? = r?.dig \\
 \end{schema}
 
-Push can then be reframed to take an image reference.
+Push and pull can then be reframed to take an image reference instead of the corresponding input parameters.
 \begin{zed}
   RefPushOk \defs \exists PushParms @ NetPushOk \land RefPushParms \\
   RefPullOk \defs \exists PullParms @ NetPullOk \land RefPullParms \\
