--- a/distribution/distribution.tex
+++ b/distribution/distribution.tex
@@ -3,7 +3,7 @@
 \usepackage{graphicx}
 \usepackage[nottoc,numbib]{tocbibind}
 %\usepackage{hyperref}
-\markboth{Draft}{Version 0.1}
+\markboth{Version 0.2}{Version 0.2}
 \pagestyle{myheadings}
 \begin{document}
 \parskip 10 pt
@@ -24,7 +24,9 @@
 
 %=============================================================================
 
-This document provides a formal model of image registries.
+This document provides a formal model of some aspects of \textit{Docker} image registries.
+
+I am indebted to Chris Frost and Steve Powell for their helpful feedback.
 
 % Alt-Cmd-M -- \emph{}
 % Alt-Cmd-Z -- \zed{}
@@ -53,21 +55,19 @@ This document provides a formal model of image registries.
 %=============================================================================
 \section{Overview of this document}
 
-Docker Inc.\ introduced container images and registries to hold them and these were later standardised as part of the Open Container Initiative. The reader is assumed to have a basic understanding of how images are used.
+Docker Inc.\ (\cite{docker}) introduced \textit{container images} and \textit{registries} to hold them and these were later standardised as part of the Open Container Initiative (\cite{oci}). The reader is assumed to have a basic understanding of how images are used.
 
 This document models image references, repositories, and registries. It covers digests and tags.
 
-The Z specification language is used to capture the model, but sufficient English text is also provided that readers who do not know Z should be able to understand the model. The appendix contains a summary of the Z notation.
-For more information about Z, please consult the Z Manual (\texttt{https://www.cs.umd.edu/~mvz/handouts/z-manual.pdf}).
-The model was type checked using \texttt{fuzz} (\texttt{https://bitbucket.org/Spivey/fuzz}).
-
-I am grateful to Chris Frost for his helpful comments on this document.
+The Z specification language is used to describe the model, but sufficient English text is also provided that readers who do not know Z should be able to understand what's going on. The appendix contains a summary of the Z notation.
+For more information about Z, please consult the Z Manual (\cite{zman}).
+The model was type checked using \texttt{fuzz} (\cite{fuzz}).
 
 %=============================================================================
 \section{Fundamentals}
 
 Images are opaque blobs as far as we are concerned here - the decomposition into layers is ignored.
-Similarly, cryptographic hashes (or \textit{hexes} to use the terminology of the OCI Distribution specification), tags, and (registry) hostnames and paths are modelled, but their details are not.
+Similarly, cryptographic hashes (or \textit{hexes}, to use the terminology of the OCI Distribution specification), tags, and (registry) hostnames and paths are modelled in terms of their usage, but not their implementation.
 \begin{zed}
 [ Image, Hex, Tag, Hostname, Path ] 
 \end{zed}
@@ -86,6 +86,8 @@ A content digest is a combination of a cryptographic hash function (such as \tex
     alg: Image \fun Hex \\
     hash: Hex \\ 
 \end{schema}
+The algorithm in a content digest is represented as a string which names one of a limited set of algorithms, but we ignore that here
+and pretend the algorithm is part of the content digest.
 
 The idea is that a content digest $d$ identifies an image $i$ if and only if applying the hash function (from the content digest) to the image produces the hash output in the content digest:\\
 %%unchecked
@@ -93,9 +95,21 @@ The idea is that a content digest $d$ identifies an image $i$ if and only if app
 \t1 d.alg~i = d.hash
 \end{zed}
 
+The limited set of algorithms is chosen so that given an image $i$ with a content digest $d$, it is extremely difficult, if not impossible, to construct
+another image $j$ with the same content digest:\\
+%%unchecked
+\begin{zed}
+\t1 d.alg~i = d.hash = d.alg~j
+\end{zed}
+
 An optional content digest is modelled as a datatype.
 \begin{zed}
-    OptionalContentDigest ::= None | Dig \ldata ContentDigest \rdata
+    OptionalContentDigest ::= None | Dig \ldata ContentDigest \rdata \\
+\end{zed}
+
+We add a convenient function for extracting the content digest from an optional content digest which is ``present''.
+\begin{zed}
+    Cd == Dig\inv \\
 \end{zed}
 
 %=============================================================================
@@ -104,13 +118,13 @@ An optional content digest is modelled as a datatype.
 
 A repository is a collection of images indexed by content digest and by tag.
 \begin{schema}{Repo}
-    cd: ContentDigest \pfun Image \\
+    cd: ContentDigest \pinj Image \\
     tag: Tag \pfun Image \\
 \where
     \forall d : \dom cd @ d.alg~(cd~d) = d.hash \\
     \ran tag \subseteq \ran cd \\
 \end{schema}
-The content digests identify the corresponding images. Each image identified by a tag is also identified by a content digest.
+The content digests identify the corresponding images and there is only one content digest per image. Each image identified by a tag is also identified by a content digest.
 
 Initially, a repository is empty.
 \begin{schema}{RepoInit}
@@ -120,7 +134,6 @@ Initially, a repository is empty.
   tag' = \emptyset \\
 \end{schema}
  
-\begin{samepage}
 An image is added to a repository by \textit{pushing} it.
 \begin{schema}{RepoPush}
   \Delta Repo \\
@@ -131,21 +144,21 @@ An image is added to a repository by \textit{pushing} it.
   tag' = tag \oplus \{ t? \mapsto i? \} \\
   cd' = cd \oplus \{ d! \mapsto i? \} \\
 \end{schema}
-The tag may be omitted in practice in which case it defaults to $Latest$. Note that the invariant of $Repo'$ ensures that the output digest identifies the input image. However, there is some non-determinism here in the choice of algorithm.
-\end{samepage}
+The tag may be omitted, in which case it defaults to $Latest$, although this is not modelled. Note that the invariant of $Repo'$ ensures that the output digest identifies the input image. There is, in theory, some non-determinism in the choice of algorithm, but, for OCI compliant implementations, SHA-256 is used everywhere.
 
+\newpage
 An image is retrieved from a repository by \textit{pulling} it.
 
-We can either pull using a content digest
+We can pull using a content digest.
 \begin{schema}{RepoPullByDigest}
   \Xi Repo \\
   d? : OptionalContentDigest \\
   i! : Image \\
 \where
-  \exists d : ContentDigest | d? = Dig~d  \land d \in \dom cd @ i! = cd~d \\
+  d? \mapsto i! \in cd \circ Cd \\
 \end{schema}
 
-or, if a content digest is not supplied, by using a tag.
+Alternatively, we can pull using a tag.
 \begin{schema}{RepoPullByTag}
   \Xi Repo \\
   t? : Tag \\
@@ -153,37 +166,46 @@ or, if a content digest is not supplied, by using a tag.
   i! : Image \\
 \where
   d? = None \\
-  t? \in \dom tag \implies i! = tag~t? \\
+  t? \mapsto i! \in tag \\
 \end{schema}
 
-\begin{samepage}
 A successful pull operation uses either a content digest or a tag.
 \begin{zed}
   RepoPullOk \defs RepoPullByDigest \lor RepoPullByTag
 \end{zed}
-Failure cases, such as ``not found'', are omitted from the model.
-\end{samepage}
+If both a tag and a content digest are provided, the tag is ignored. Failure cases, such as ``not found'', are omitted from the model.
 
 %=============================================================================
 \newpage
 \section{Registries}
 
-A registry is a collection of repositories index by path.
+A registry is a collection of repositories indexed by path.
 \begin{schema}{Registry}
-    repo: Path \fun Repo \\
+    repo: Path \pfun Repo \\
 \end{schema}
-Paths which do not exist are modelled as pointing to empty repositories.
 
-Initially a registry has only empty repositories.
-\begin{schema}{RegistryInit}
-  Registry' \\
+An empty registry has no repositories.
+\begin{zed}
+  EmptyRegistry \defs [ Registry | repo = \emptyset ]
+\end{zed}
+
+Initially a registry has no repositories.
+\begin{zed}
+  RegistryInit \defs EmptyRegistry'
+\end{zed}
+
+An empty repository may be added at a given path.
+\begin{schema}{RegistryAddRepoOk}
+  \Delta Registry \\
+  p? : Path \\
 \where
-  \forall p : Path @ \\
-  \t1 \exists RepoInit @ \\
-  \t2 repo'~p = \theta Repo' \\
+  p? \notin \dom repo \\
+  \exists RepoInit @ repo' = repo \cup \{ p? \mapsto \theta Repo' \}
 \end{schema}
+Some registry implementations, such as Amazon's ECR, require a repository to be created before an image can be pushed to the repository.
+Other registry implementations such as Docker's registry and Google's GCR will create a repository automatically when the first image is pushed to it. We do not model automatic repository creation.
 
-\begin{samepage}
+\pagebreak
 We define a promotion schema\footnote{Promotion schemas are used to turn operations on a particular type into operations on collection of the type which operate on a single member of the collection and leave the rest unchanged} which operates on a single repository in a registry.
 \begin{schema}{RegistryPromote}
   \Delta Registry \\
@@ -195,7 +217,6 @@ We define a promotion schema\footnote{Promotion schemas are used to turn operati
   repo' = repo \oplus \{ p? \mapsto \theta Repo' \} \\
 \end{schema}
 The path must be valid and the registry is preserved except for the repository identified by the path which may be updated.
-\end{samepage}
 
 We then promote the repository push and pull operations to operate on a registry.
 \begin{zed}
@@ -203,7 +224,7 @@ We then promote the repository push and pull operations to operate on a registry
   RegistryPullOk \defs \exists \Delta Repo @ RepoPullOk \land RegistryPromote \\
 \end{zed}
   
-Registries are arranged in a network indexed by hostname.
+Registries are accessed remotely in a network via their hostnames.
 \begin{schema}{Net}
     reg: Hostname \pfun Registry \\
 \end{schema}
@@ -221,7 +242,7 @@ We can add an empty registry to the network.
   h? : Hostname \\
 \where
   h? \notin \dom reg \\
-  \exists RegistryInit @ reg' = reg \cup \{ h? \mapsto \theta Registry' \} \\
+  \exists EmptyRegistry @ reg' = reg \cup \{ h? \mapsto \theta EmptyRegistry \} \\
 \end{schema}
 
 We can also remove a registry from the network.
@@ -233,7 +254,6 @@ We can also remove a registry from the network.
   reg' = \{ h? \} \ndres reg \\
 \end{schema}
 
-\begin{samepage}
 We define a promotion schema which operates on a single registry in a network.
 \begin{schema}{NetPromote}
   \Delta Net \\
@@ -245,16 +265,13 @@ We define a promotion schema which operates on a single registry in a network.
   reg' = reg \oplus \{ h? \mapsto \theta Registry' \} \\
 \end{schema}
 The hostname must be valid and the network is preserved except for the registry identified by the hostname which may be updated.
-\end{samepage}
 
-\begin{samepage}
 Finally, we promote the push and pull operations to work on a network.
 \begin{zed}
   NetPushOk \defs \exists \Delta Registry @ RegistryPush \land NetPromote \\
   NetPullOk \defs \exists \Delta Registry @ RegistryPullOk \land NetPromote
 \end{zed}
-Pushing and pulling can fail if there is no registry with the input hostname.
-\end{samepage}
+Pushing and pulling fail if there is no registry with the input hostname.
 
 %=============================================================================
 \newpage
@@ -297,7 +314,6 @@ So far the push and pull operations have accumulated several input parameters.
     d? : OptionalContentDigest \\
 \end{schema}
 
-\begin{samepage}
 An image reference is mapped to push input parameters as follows.
 \begin{schema}{RefPushParms}
     r? : Ref \\
@@ -309,7 +325,6 @@ An image reference is mapped to push input parameters as follows.
     r?.dig = None \\
 \end{schema}
 Pushing is not allowed if the image reference has a content digest.
-\end{samepage}
 
 An image reference is mapped to pull input parameters as follows.
 \begin{schema}{RefPullParms}
@@ -322,7 +337,7 @@ An image reference is mapped to pull input parameters as follows.
     d? = r?.dig \\
 \end{schema}
 
-Push and pull can then be reframed to take an image reference instead of the corresponding input parameters.
+Push and pull are then be reframed to take an image reference instead of the corresponding input parameters.
 \begin{zed}
   RefPushOk \defs \exists PushParms @ NetPushOk \land RefPushParms \\
   RefPullOk \defs \exists PullParms @ NetPullOk \land RefPullParms \\
@@ -338,17 +353,12 @@ Push and pull can then be reframed to take an image reference instead of the cor
 \appendix
 
 %=============================================================================
-%   Z   N O T A T I O N
-%=============================================================================
-\input{../z/z-notation.tex}
-
-%=============================================================================
 %   B I B L I O G R A P H Y
 %=============================================================================
-%\newpage
-%\begin{flushleft}
-%\begin{thebibliography}{99}
-%\label{sec:references}
+\newpage
+\begin{flushleft}
+\begin{thebibliography}{99}
+\label{sec:references}
 % `99' is a picture of the generated numeric references -- they are two digits in this bibliography
 % If we had a hundred or more we would have used 999, or whatever.
 
@@ -358,6 +368,34 @@ Push and pull can then be reframed to take an image reference instead of the cor
 %  \emph{The computer as Master Mind}.                    % title
 %  J. Recreational Mathematics, Vol.~9(1), 1976-1977. % publisher, or journal, volume and date
 
-%\end{thebibliography}
-%\end{flushleft}
+\bibitem{docker}
+  Various authors,
+  \emph{Docker Inc.},
+  \texttt{https://www.docker.com/}.
+
+\bibitem{oci}
+  Various authors,
+  \emph{Open Container Initiative},
+  \texttt{https://www.opencontainers.org/}.
+
+\bibitem{zman}
+  Mike Spivey,
+  \emph{The Z Manual},
+  \texttt{https://www.cs.umd.edu/ mvz/handouts/z-manual.pdf}.
+
+\bibitem{fuzz}
+  Mike Spivey,
+  \emph{The fuzz type-checker for Z},
+  \texttt{https://bitbucket.org/Spivey/fuzz}.
+
+
+\end{thebibliography}
+\end{flushleft}
+
+%=============================================================================
+%   Z   N O T A T I O N
+%=============================================================================
+\newpage
+\input{../z/z-notation.tex}
+
 \end{document}
